orchestrator-run-20260604-175941.log
=== Orchestrator run log (20260604-175941) ===

--- stdout ---


--- stderr ---
Compiling knot v0.1.0 (/home/hayden/workspace/ai/knot)
error[E0432]: unresolved import `crate::application::ports::KnotStatePort`
  --> src/adapters/inbound/mod.rs:21:18
   |
21 |     AgentRunner, KnotStatePort, LoomLogPort, LoomRepository, TieOffSink,
   |                  ^^^^^^^^^^^^^ no `KnotStatePort` in `application::ports`
   |
help: a similar name exists in the module
   |
21 -     AgentRunner, KnotStatePort, LoomLogPort, LoomRepository, TieOffSink,
21 +     AgentRunner, KnotState, LoomLogPort, LoomRepository, TieOffSink,
   |

error[E0432]: unresolved import `crate::application::ports::KnotStatePort`
 --> src/adapters/outbound/knot_state.rs:6:31
  |
6 |     KnotEventType, KnotState, KnotStatePort, ProcessingStatus, PortError,
  |                               ^^^^^^^^^^^^^ no `KnotStatePort` in `application::ports`
  |
help: a similar name exists in the module
  |
6 -     KnotEventType, KnotState, KnotStatePort, ProcessingStatus, PortError,
6 +     KnotEventType, KnotState, KnotState, ProcessingStatus, PortError,
  |

error[E0106]: missing lifetime specifier
   --> src/application/usecases.rs:352:17
    |
350 |         events: &[LoomEvent],
    |                 ------------
351 |         knot_id: &KnotId,
    |                  -------
352 |     ) -> Option<&LoomEvent> {
    |                 ^ expected named lifetime parameter
    |
    = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `events` or `knot_id`
help: consider introducing a named lifetime parameter
    |
349 ~     fn find_latest_knot_event<'a>(
350 ~         events: &'a [LoomEvent],
351 ~         knot_id: &'a KnotId,
352 ~     ) -> Option<&'a LoomEvent> {
    |

error[E0405]: cannot find trait `KnotStatePort` in module `application::ports`
   --> src/lib.rs:194:54
    |
194 |     let knot_state_port: Arc<dyn application::ports::KnotStatePort> =
    |                                                      ^^^^^^^^^^^^^ not found in `application::ports`

warning: unused import: `KnotState`
  --> src/application/usecases.rs:11:51
   |
11 |     AgentRunner, ExecutionContext, KnotEventType, KnotState,
   |                                                   ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0106, E0405, E0432.
For more information about an error, try `rustc --explain E0106`.
warning: `knot` (lib) generated 1 warning
error: could not compile `knot` (lib) due to 4 previous errors; 1 warning emitted
